로그인 버튼 나오는 조건 추가

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head></head>
 
@@ -26,7 +26,7 @@
                       악세사리
                     </p>
                     <div class="btn-box">
-                      <a href="/member/login" class="btn1">
+                      <a href="/member/login" sec:authorize="isAnonymous()" class="btn1">
                         Login
                       </a>
                     </div>
