주문 목록으로 들어가는 url 추가

--- a/src/main/resources/templates/my/mypage.html
+++ b/src/main/resources/templates/my/mypage.html
@@ -24,28 +24,28 @@
     </div>
     <div class="status">
 
-      <a href="#" class="item">
+      <a href="/member/o_l" class="item">
         <div>
           <div class="green number" th:text="${cartCount}">6</div>
           <div class="text">장바구니</div>
         </div>
         <div class="icon"> > </div>
       </a>
-      <a href="#" class="item">
+      <a href="/member/o_l" class="item">
         <div>
           <div class="number" th:text="${pay}">0</div>
           <div class="text">결제완료</div>
         </div>
         <div class="icon"> > </div>
       </a>
-      <a href="#" class="item">
+      <a href="/member/o_l" class="item">
         <div>
           <div class="green number" th:text="${delivery}">1</div>
           <div class="text">배송중</div>
         </div>
         <div class="icon"> > </div>
       </a>
-      <a href="#" class="item">
+      <a href="/member/o_l" class="item">
         <div>
           <div class="green number" th:text="${deliveryCompleted}">3</div>
           <div class="text">배송완료</div>
