아이템 컬러 선택 시, select에 색상 남아있게 하기

--- a/src/main/resources/templates/Item/item.html
+++ b/src/main/resources/templates/Item/item.html
@@ -30,7 +30,7 @@
           <select name="itemColor" id="itemColor" class="category">
             <option value="">컬러 선택</option>
             <th:block th:each="color : ${itemColors}">
-              <option th:value="${color}" th:text="${color.getName()}"></option>
+              <option th:value="${color}" th:text="${color.getName()}" th:selected="${color == selectColor}"></option>
             </th:block>
           </select>
         </div>
